@@ -20,6 +20,7 @@ python -tt $basedir/apport_python_hook.py -v
 python -tt $basedir/apport/ui.py -v
 python -tt $basedir/apport/REThread.py -v
 python -tt $basedir/apport/chroot.py -v
+python -tt $basedir/apport/crashdb_impl/memory.py -v
 if [ "$local" ]; then
     for b in backends/*; do
         python -tt $b -v
