@@ -8,8 +8,10 @@ apport (0.83) UNRELEASED; urgency=low
   * backends/packaging-apt-dpkg.py: Implement compare_versions() using
     apt.VersionCompare(), add some test cases.
   * apport/crashdb.py: Add method interfaces for crash duplicate detection.
+  * apport/crashdb_impl/memory.py: Change internal data management to track
+    fixed version and duplicates, and add a test suite for all methods.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 08 Jun 2007 13:22:57 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 11 Jun 2007 10:34:45 +0200
 
 apport (0.82) gutsy; urgency=low
 
